--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -1,9 +1,9 @@
 html {
   box-sizing: border-box;
-  min-height: 100vh;
-  width: 100vw;
-  /* position: relative; */
+  height: 100vh;
+  width: 100%
 }
+
 body {
   margin: 0;
   padding: 0;
